Add some item fade in style support

--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -8,7 +8,7 @@ styles:
 
 <div class="site-content site-content--zero-top-padding content-canvas">
 
-  <div class="home-layout content-canvas-item-full">
+  <div class="home-layout content-canvas-item-full item-fade-in item-fade-in-1-5">
 
     <div class="home-layout__item home-layout__item--left home-layout__item--dark-cyan">
       <div class="home-layout__item__inner">
@@ -29,7 +29,7 @@ styles:
 
   </div>
 
-  <div class="site-content content-canvas-item-wide">
+  <div class="site-content content-canvas-item-wide item-fade-in item-fade-in-1-5 item-fade-in-delay-md">
 
     {% include "layouts/components/index-list.njk" %}
 
