--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -72,3 +72,8 @@
 # Navigation
 --------------------------------------------------------------*/
 @use "partials/navigation";
+
+/*--------------------------------------------------------------
+# Fade In
+--------------------------------------------------------------*/
+@use "components/fade-in";
