--- a/_includes/layouts/list.njk
+++ b/_includes/layouts/list.njk
@@ -5,7 +5,7 @@ list: true
 
 	<div class="site-content site-content--zero-top-padding content-canvas">
 		
-		<div class="site-content{% if pageClass %} {{ pageClass }} {% else %} site-content--surface-teal site-content--surface-dark{% endif %} jumbotron content-canvas-item-full content-canvas">
+		<div class="site-content{% if pageClass %} {{ pageClass }} {% else %} site-content--surface-teal site-content--surface-dark{% endif %} jumbotron content-canvas-item-full content-canvas item-fade-in item-fade-in-1-5">
 
 			{% include "layouts/components/title-bar.njk" %}
 			
@@ -14,7 +14,7 @@ list: true
 		</div>
 
 
-		<div class="site-content content-canvas-item-wide">
+		<div class="site-content content-canvas-item-wide item-fade-in item-fade-in-1-5 item-fade-in-delay-md">
 
 			{% include "layouts/components/index-list.njk" %}
 
