--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -4,7 +4,7 @@ section: page
 ---
 
 	{% if image.path %}
-			<figure class="{{ image.figureClass.page }}">
+			<figure class="{{ image.figureClass.page }} item-fade-in item-fade-in-1-5">
 			{% image image.path, image.alt, image.class, image.pictureClass.page %}
 			{% if image.caption %}
 			<figcaption>{{ image.caption | safe }}{% if image.credit %} {{ image.credit | safe }}{% endif %}</figcaption>
@@ -20,7 +20,7 @@ section: page
 {% endfor %}
 
 	{% if description %}
-	<div class="page__summary{% if page.class %}{% if page.class.includes('page--summary--wide') %} content-canvas-item-full content-canvas site-content--small-padding{% elif page.class.includes('page--with-hero') %} content-canvas-item-full content-canvas site-content site-content--zero-spacing{% else %} content-canvas-item-wide-left{% endif %}{% endif %}{% if tags | hasTag('#writing') and page.class %}{% if summary.class %} {{ summary.class }}{% elif page.class.includes('page--writing--light') %} site-content--surface-black-light site-content--surface-dark{% endif %}{% endif %}">
+	<div class="page__summary{% if page.class %}{% if page.class.includes('page--summary--wide') %} content-canvas-item-full content-canvas site-content--small-padding{% elif page.class.includes('page--with-hero') %} content-canvas-item-full content-canvas site-content site-content--zero-spacing{% else %} content-canvas-item-wide-left{% endif %}{% endif %}{% if tags | hasTag('#writing') and page.class %}{% if summary.class %} {{ summary.class }}{% elif page.class.includes('page--writing--light') %} site-content--surface-black-light site-content--surface-dark{% endif %}{% endif %} item-fade-in item-fade-in-1-5 item-fade-in-delay-sm">
 
 		{% if tags | hasTag('#writing') %}
 		<div class="metadata{% if page.class and (page.class.includes('page--with-hero') or page.class.includes('page--summary--wide')) %} content-canvas-item-wide-left{% endif %}">
@@ -36,14 +36,14 @@ section: page
 			</div>
 		</div>
 		{% endif %}
-		<div class="page__summary__content{% if page.class and (page.class.includes('page--with-hero') or page.class.includes('page--summary--wide')) %} content-canvas-item-wide-left{% endif %}">
+		<div class="page__summary__content{% if page.class and (page.class.includes('page--with-hero') or page.class.includes('page--summary--wide')) %} content-canvas-item-wide-left{% endif %} item-fade-in item-fade-in-1-5 item-fade-in-delay-sm">
 			{{ description | markdown | safe }}
 		</div>
 	</div>
 	{% endif %}
 
 	{% if metadata.show !== false %}
-	<div class="metadata page__metadata">
+	<div class="metadata page__metadata item-fade-in item-fade-in-1-5 item-fade-in-delay-md">
 		{% if tags | hasTag('#writing', false) %}
 		<div class="metadata__tags">
 			{%- for topic in pageTags %}
@@ -73,6 +73,8 @@ section: page
 	</div>
 	{% endif %}
 
-	{{ layoutContent | safe }}
+	<div class="layout-content item-fade-in item-fade-in-1-5 item-fade-in-delay-mdl">
+		{{ layoutContent | safe }}
+	</div>
 
 	{% include "layouts/components/page-footer.njk" %}
