Page footer points to Bluesky

--- a/_includes/layouts/components/page-footer.njk
+++ b/_includes/layouts/components/page-footer.njk
@@ -11,7 +11,7 @@
       {% else %}
       <p>If you enjoyed this piece, please follow this blog for more.</p>
       {% endif %}
-      <p>You can also <a href="https://mstdn.social/@joesb" rel="noopener" target="_blank">follow me on Mastodon</a>, to carry on the conversation.</p>
+      <p>You can also <a href="https://bsky.app/profile/jsbaker.co.uk" rel="noopener" target="_blank">follow me on Bluesky</a>, to carry on the conversation.</p>
       <p>Joe</p>
 
   </div>
