Upgrade to 11ty 3.x

--- a/src/_includes/layouts/components/site-main.njk
+++ b/src/_includes/layouts/components/site-main.njk
@@ -2,11 +2,11 @@
 			{% if not primary and not list %}
 			<div class="site-content content-canvas page{% if page.class %} {{ page.class }}{% endif %}">
 				{% include "layouts/components/title-bar.njk" %}
-				{{ layoutContent | safe }}
+				{{ content | safe }}
 			</div>
 			{% else %}
 
-				{{ layoutContent | safe }}
+				{{ content | safe }}
 
 			{% endif %}
 		</main>
