--- a/src/sass/components/_site-footer.scss
+++ b/src/sass/components/_site-footer.scss
@@ -121,4 +121,10 @@
       mask-image: url("/static/images/icons/medium.svg");
     }
   }
+
+  &.bluesky {
+    &::after {
+      mask-image: url("/static/images/icons/bluesky.svg");
+    }
+  }
 }
