Homepage link image to about

--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -22,8 +22,9 @@ styles:
 
     <div class="home-layout__item home-layout__item--right">
       <div class="home-layout__item__inner">
-
+        <a href="/about/">
         {% image image.path, image.alt, image.class, image.pictureClass.page, "(min-width: 30em) 50vw, 100vw", [300, 600] %}
+        </a>
       </div>
     </div>
 
