--- a/src/sass/partials/_elements.scss
+++ b/src/sass/partials/_elements.scss
@@ -38,6 +38,8 @@ ELEMENTS
     --surface-teal: #{variables.$surface-teal};
     --surface-violet: #{variables.$surface-violet};
     --surface-rose: #{variables.$surface-rose};
+    --color-brand-primary: var(--surface-teal);
+    --color-brand-secondary: var(--surface-violet);
 
     --font-size-fluid-000: clamp(#{variables.$body-v-sml-font-size-mobile}, 1.3vw, #{variables.$body-v-sml-font-size});
     --font-size-fluid-00: clamp(#{variables.$body-sml-font-size-mobile}, 1.4vw, #{variables.$body-sml-font-size});
