Move Open Props to  link tags, update About page text

--- a/src/_includes/layouts/components/head.njk
+++ b/src/_includes/layouts/components/head.njk
@@ -23,6 +23,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,500;0,700;1,300;1,500;1,700&family=PT+Serif:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
   
+  {# OpenProps #}
+  <link rel="stylesheet" href="//unpkg.com/open-props@1.7.13/open-props.min.css" />
+  <link rel="stylesheet" href="//unpkg.com/open-props@1.7.13/normalize.light.min.css" />
+  <link rel="stylesheet" href="//unpkg.com/open-props@1.7.13/buttons.light.min.css" />
   {% set css %}
     {% include "assets/css/styles.css" %}
   {% endset %}
