--- a/src/_sass/styles.scss
+++ b/src/_sass/styles.scss
@@ -16,7 +16,7 @@
 /*--------------------------------------------------------------
 # OpenProps
 --------------------------------------------------------------*/
-@use "openprops";
+// @use "openprops";
 
 /*--------------------------------------------------------------
 # Variables
