--- a/pages/sitemap.njk
+++ b/pages/sitemap.njk
@@ -9,6 +9,5 @@ eleventyExcludeFromCollections: true
         <url>
             <loc>{{ page.url | url | absoluteUrl(metadata.url) }}</loc>
             <lastmod>{{ page.date.toISOString() }}</lastmod>
-        </url>
-    {% endfor %}
+        </url>{% endfor %}
 </urlset>
