--- a/pages/sitemap.njk
+++ b/pages/sitemap.njk
@@ -4,10 +4,9 @@ layout:
 eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
-<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
-    {% for page in collections.all %}
-        <url>
-            <loc>{{ page.url | url | absoluteUrl(metadata.url) }}</loc>
-            <lastmod>{{ page.date.toISOString() }}</lastmod>
-        </url>{% endfor %}
+<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">{% for page in collections.all %}
+  <url>
+    <loc>{{ page.url | url | absoluteUrl(metadata.url) }}</loc>
+    <lastmod>{{ page.date.toISOString() }}</lastmod>
+  </url>{% endfor %}
 </urlset>
