--- a/src/_includes/layouts/components/title-bar.njk
+++ b/src/_includes/layouts/components/title-bar.njk
@@ -7,5 +7,10 @@
 			<div class="container">
 				<h1 class="page-title__heading">{{ title }}</h1>
 			</div>
+			{% if description %}
+			<div class="container">
+				{{ description | markdown | safe }}
+			</div>
+			{% endif %}
 		</div>
 	</div>
