--- a/src/_sass/partials/_typography.scss
+++ b/src/_sass/partials/_typography.scss
@@ -49,6 +49,25 @@ h6,
   margin-block: 1.5rem 0.75rem;
 }
 
+:where(h1,h2,h3,h4,h5,h6) {
+  line-height: var(--font-lineheight-0);
+
+  &.heading-wide {
+    max-inline-size: var(--size-header-3);
+  }
+
+  &.heading-v-wide {
+    max-inline-size: var(--size-header-4);
+  }
+
+  &.heading-vv-wide {
+    max-inline-size: var(--size-header-5);
+  }
+  &.heading-full {
+    max-inline-size: unset;
+  }
+}
+
 h1,
 .h1-style {
   font-size: var(--font-size-fluid-3);
@@ -142,7 +161,7 @@ h5,
 }
 
 .smaller {
-  font-size: var(--font-size-fluid-00);
+  font-size: var(--font-size-fluid-0);
 }
 
 .small {
