--- a/src/_sass/components/_review.scss
+++ b/src/_sass/components/_review.scss
@@ -7,13 +7,32 @@
   font-style: italic;
 }
 
-@include rt.respond-to('medium') {
-    
-  .review-item-mini {
+.review-item-mini {
     display: grid;
     align-content: start;
     column-gap: var(--size-fluid-1);
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: min-content auto 1fr;
+
+    &.review-item-mini-with-cover {
+      .review-item-title {
+        grid-column: 1;
+      }
+      .review-item-author,
+      .review-item-meta {
+        grid-column: 1;
+      }
+      .review-item-cover {
+        grid-column: 2;
+        grid-row: 1 / span 3;
+      }
+    }
+}
+
+@include rt.respond-to('medium') {
+    
+  .review-item-mini {
+    grid-template-columns: 2fr 3fr;
     margin-block-end: var(--size-5);
 
     .review-item-title {
@@ -25,11 +44,33 @@
       }
     }
 
-    .review-item-author {
+    .review-item-author,
+    .review-item-meta {
+      margin-block-start:  var(--size-2);
       grid-column: 2;
     }
-    .review-item-meta {
-      grid-column: 2;
+
+
+
+    &.review-item-mini-with-cover {
+      grid-template-columns: minmax(auto, 120px) 1fr 2fr;
+      grid-template-rows: auto 1fr;
+
+      .review-item-title {
+        grid-column: 2;
+      }
+      .review-item-author,
+      .review-item-meta {
+        grid-column: 3;
+      }
+      .review-item-cover {
+        grid-column: 1;
+        grid-row: 1 / span 2;
+
+        .picture--block {
+          margin-block: var(--size-1);
+        }
+      }
     }
   }
 }
