--- a/src/_sass/components/_page.scss
+++ b/src/_sass/components/_page.scss
@@ -70,6 +70,7 @@
 
 .page-title__heading {
   font-size: var(--font-size-fluid-3);
+  max-inline-size: var(--size-header-2);
 }
 
 .page--with-hero {
