--- a/src/_sass/partials/_typography.scss
+++ b/src/_sass/partials/_typography.scss
@@ -173,6 +173,10 @@ h5,
   font-size: var(--font-size-fluid-1);
 }
 
+.larger {
+  font-size: var(--font-size-fluid-011);
+}
+
 .header-highlight {
   border-left: 2px solid ;
   padding-left: px-to-rem.px-to-rem(20px);
