More content, fix content canvas for lists

--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -6,7 +6,7 @@ styles:
   - home.css
 ---
 
-<div class="site-content site-content--zero-top-padding content-canvas">
+<div class="site-content site-content--zero-top-padding content-canvas-thin">
 
   <div class="home-layout content-canvas-item-full item-fade-in item-fade-in-1-5">
 
