--- a/src/_includes/layouts/list.njk
+++ b/src/_includes/layouts/list.njk
@@ -3,7 +3,7 @@ layout: base.njk
 list: true
 ---
 
-	<div class="site-content site-content--zero-top-padding content-canvas">
+	<div class="site-content site-content--zero-top-padding content-canvas-thin">
 		
 		<div class="site-content{% if pageClass %} {{ pageClass }} {% else %} site-content--surface-teal site-content--surface-dark{% endif %} jumbotron content-canvas-item-full content-canvas item-fade-in item-fade-in-1-5">
 
