--- a/src/_sass/components/_content_canvas.scss
+++ b/src/_sass/components/_content_canvas.scss
@@ -21,6 +21,26 @@
   grid-auto-flow: row;
 }
 
+.content-canvas-thin {
+  display: grid;
+  column-gap: var(--size-fluid-1);
+  grid-template-columns: 
+    [full-start]
+      minmax(0, 2vw)
+    [wide-start]
+      minmax(0, 2vw)
+    [main-start]
+      minmax(10ch, calc(#{variables.$break-medium} - 3rem))
+    [main-mid]
+      minmax(10ch, auto)
+    [main-end]
+      minmax(0, 2vw)
+    [wide-end]
+    minmax(0, 2vw)
+    [full-end];
+  grid-auto-flow: row;
+}
+
 @include rt.respond-to('large') {
   .content-canvas {
     column-gap: var(--size-fluid-3);
@@ -40,9 +60,29 @@
       [full-end];
     // grid-template-rows: fit-content(25ch);
   }
+
+  .content-canvas-thin {
+    column-gap: var(--size-fluid-3);
+    grid-template-columns: 
+      [full-start]
+        minmax(3vw, 1fr)
+      [wide-start]
+        minmax(5vw,  15ch)
+      [main-start]
+        minmax(calc(#{variables.$break-very-small} - 3rem), calc((#{variables.$break-small} - 3rem) * 3 / 5))
+      [main-mid]
+        minmax(20ch, calc((#{variables.$break-small} - 3rem) * 2 / 5))
+      [main-end]
+        minmax(5vw, 15ch)
+      [wide-end]
+        minmax(3vw, 1fr)
+      [full-end];
+    // grid-template-rows: fit-content(25ch);
+  }
 }
 
-.content-canvas > *, 
+.content-canvas > *,
+.content-canvas-thin > *, 
 .content-canvas-item-left,
 .content-canvas-item-right {
   width: 100%;
