--- a/src/_includes/layouts/components/head.njk
+++ b/src/_includes/layouts/components/head.njk
@@ -8,15 +8,15 @@
   
   <title>{{ pageTitle or title or renderData.title or metadata.title }} | {{ metadata.title }}</title>
 
+  <!-- meta -->
+  <meta name="author" itemprop="author" content="{{ metadata.author.name }}">
+  <meta name="description" itemprop="description" content="{{ description }}">
+
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/static/apple-touch-icon.png" type="image/png">
   <link rel="icon" href="/static/favicon/favicon-16x16.png" type="image/png" sizes="16x16">
   <link rel="icon" href="/static/favicon/favicon-32x32.png" type="image/png" sizes="32x32">
   <link rel="manifest" href="/static/favicon/site.webmanifest">
-
-  {% if metadesc %}
-  <meta name="description" content="{{ metadesc }}" />
-  {% endif %}
 
   {# Google Fonts #}
   <link rel="preconnect" href="https://fonts.googleapis.com">
