More Zaphod  text, plus some styles

--- a/src/_sass/components/_helpers.scss
+++ b/src/_sass/components/_helpers.scss
@@ -3,6 +3,10 @@
 @use "../tools/respond-to" as rt;
 
 // Margin helpers
+.margin-block-start-none {
+  margin-block-start: 0 !important;
+}
+
 .margin-sml {
   margin: var(--size-2) !important;
 }
