--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -12,7 +12,7 @@ image:
 			<figure class="{{ image.figureClass.page }} item-fade-in item-fade-in-1-5">
 			{% image image.path, image.alt, image.class, image.pictureClass.page %}
 			{% if image.caption or image.credit %}
-			<figcaption>{{ image.caption | safe }}{% if image.credit and image.caption %} | {% endif %}{% if image.credit %}{{ image.credit | safe }}{% endif %}</figcaption>
+			<figcaption>{{ image.caption | safe }}{% if image.credit and image.caption %} | {% endif %}{% if image.credit %}{{ image.credit | markdown(true) | safe }}{% endif %}</figcaption>
 			{% endif %}
 			</figure>
 			{# {% ImgFigure image.caption, image.figureClass.page %}![{{ image.alt }}]({{ image.path }}){eleventy:widths="[300, 600, 1000, 1980]" eleventy:formats="webp,jpg"}{% endImgFigure %} #}
