--- a/src/_sass/partials/_typography.scss
+++ b/src/_sass/partials/_typography.scss
@@ -46,7 +46,7 @@ h6,
   letter-spacing: normal;
   margin: 0;
   mix-blend-mode: normal;
-  margin-block: 1.5rem 0.75rem;
+  margin-block: 1.5rem 1rem;
 }
 
 :where(h1,h2,h3,h4,h5,h6) {
@@ -160,11 +160,13 @@ h5,
   margin: 0;
 }
 
-.smaller {
+.smaller,
+blockquote .smaller {
   font-size: var(--font-size-fluid-0);
 }
 
-.small {
+.small,
+blockquote .small {
   font-size: var(--font-size-fluid-000);
   line-height: var(--font-lineheight-2) !important;
 }
