--- a/src/_sass/components/_jumbotron.scss
+++ b/src/_sass/components/_jumbotron.scss
@@ -2,6 +2,7 @@
   :where(p) {
     font-size: var(--font-size-fluid-1);
     line-height: var(--font-lineheight-1);
+    max-inline-size: var(--size-content-1-1);
   }
 
   :where(small) {
