--- a/src/_sass/partials/_elements.scss
+++ b/src/_sass/partials/_elements.scss
@@ -50,6 +50,8 @@ ELEMENTS
     --font-size-fluid-3: clamp(#{variables.$h1-font-size-mobile}, 4vw, #{variables.$h1-font-size});
     --font-size-fluid-4: clamp(#{variables.$h1-lg-font-size-mobile}, 6vw, #{variables.$h1-lg-font-size});
 
+    --size-content-1-1: 30ch;
+
     // --gradient-6: conic-gradient(from 90deg at bottom right, black, white);
     
     font-family: variables.$primary-font;
