Update the Tinker Tailor content, plus some styles

--- a/src/_includes/layouts/page-oldbooks.njk
+++ b/src/_includes/layouts/page-oldbooks.njk
@@ -2,7 +2,7 @@
 layout: base.njk
 sharePage: true
 supertitle: Old Books Friday
-supertitleLinkBack: /reading/oldbooks/
+supertitleLinkBack: /reading/old-books/
 type: oldbooks
 hideDescription: true
 image:
