Update the Tinker Tailor content, plus some styles

--- a/src/_includes/layouts/components/index-list.njk
+++ b/src/_includes/layouts/components/index-list.njk
@@ -27,7 +27,7 @@
           </div>
           {% endif %}
           <h2><a href="{{ item.url | url }}"{% activepath item.url, page.url %}>{{ item.data.title | markdown | safe }}</a></h2>
-          {% if loop.first and item.data.description %}
+          {% if loop.first and item.data.description and not hideDescriptions %}
           <div class="h5-style">
           {{ item.data.description | markdown | safe }}
           </div>
