--- a/src/_sass/partials/_typography.scss
+++ b/src/_sass/partials/_typography.scss
@@ -140,6 +140,10 @@ h5,
   font-weight: variables.$base-font-weight-bold;
 }
 
+.italic {
+  font-style: italic;
+}
+
 .centered {
   text-align: center;
 }
