--- a/src/_includes/layouts/page-oldbooks.njk
+++ b/src/_includes/layouts/page-oldbooks.njk
@@ -92,7 +92,7 @@ image:
   </div>
   {% endif %}
 
-  <div class="layout-content item-fade-in item-fade-in-1-5 item-fade-in-delay-mdl{% if is_review %} content-canvas-item-full content-canvas{% endif %}">
+  <div class="layout-content item-fade-in item-fade-in-1-5 item-fade-in-delay-mdl content-canvas-item-full content-canvas">
     {{ content | safe }}
   </div>
 
