Metadata display left in lists, right in content

--- a/src/_sass/components/_index-list.scss
+++ b/src/_sass/components/_index-list.scss
@@ -83,7 +83,9 @@
     // }
   }
 
+  .metadata__tags,
   .metadata {
+    justify-content: flex-start;
     font-size: var(--font-size-fluid-000);
   }
 }
